--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,11 @@ a {
 	text-decoration: none;
 }
 
+a.button {
+	color: #fff;
+	text-decoration: none;
+}
+
 .contact a {
 	color: #474747;
 }
@@ -54,7 +59,7 @@ section.location .alternating-content-text p {
 
 
 /* ------ Header Styling ------*/
-h1 {
+h1  {
   font-family: "FreightBigPro-Light";
   font-weight: 100;
   font-size: 3.5rem;
@@ -78,7 +83,7 @@ h1 {
 }
 
 
-h2  {
+h2, .product-desc h1  {
 	font-family: "FreightBigPro-Light", Verdana, sans-serif;
 	font-weight: 100;
 	font-size: 3rem;
@@ -87,7 +92,7 @@ h2  {
 	line-height: 4rem;
 }
 
-h3 {
+h3, .child-footer.mailing-list label, footer h1 {
 	font-family: "Styrene-Regular", Verdana, sans-serif;
 	font-weight: 400;
 	font-size: 1rem;
@@ -96,7 +101,6 @@ h3 {
 	text-transform: uppercase;
 	text-align: left;
 }
-
 
 section.values h3 {
 	text-align: center;
@@ -140,12 +144,11 @@ section.detailed-product {
 	background-color: #20605A;
 	letter-spacing: 0.1rem;
 	text-transform: uppercase;
-	padding: 0.7rem 1.5rem;
-	border-radius: 1.2rem;
+	padding: 1rem 1.5rem;
+	border-radius: 1.5rem;
 	opacity: 1;
 	border: none;
 	color: #fff;
-
 }
 
 .full-service .btn-main {
@@ -223,7 +226,7 @@ form .btn-item {
 	padding-right: 35rem;
 }
 
-label, h3.billing-address {
+label, h2.billing-address {
   color: #20605A;
   font-family: "Styrene-Regular", Verdana, sans-serif;
   margin-bottom: .5rem;
@@ -237,7 +240,7 @@ label, h3.billing-address {
 	color: #474747;
 }
 
-h3.billing-address {
+h2.billing-address {
 	padding: 0;
 }
 
@@ -611,7 +614,7 @@ p.price.sale {
 	color: red;
 }
 
-s.old-price {
+del.old-price {
 	color: #474747;
 	font-size: .8rem;
 }
@@ -673,6 +676,7 @@ s.old-price {
 
 .child-footer.mailing-list {
 	max-width: 15rem;
+	padding-top: 1rem;
 }
 
 .child-footer.mailing-list button {
