--- a/css/grids.css
+++ b/css/grids.css
@@ -1,57 +1,59 @@
-
 /* The basic structure was built from referencing Weeks 3's lab tutorials */
 
-*, *::after, *::before {
-	box-sizing: border-box;
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
 }
 
-.grid, section.location {
-	display: -webkit-flex; 			/* Supports older browsers */
-	display: -ms-flex; 				/* Supports Internet 10 */
-	display: flex;
-	flex-wrap: -webkit-flex;
-	flex-wrap: -ms-flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
+.grid,
+section.location {
+  display: -webkit-flex; /* Supports older browsers */
+  display: -ms-flex; /* Supports Internet 10 */
+  display: flex;
+  flex-wrap: -webkit-flex;
+  flex-wrap: -ms-flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .grid-product {
-	display: -webkit-flex; 			/* Supports older browsers */
-	display: -ms-flex; 				/* Supports Internet 10 */
-	display: flex;
-	flex-wrap: -webkit-flex;
-	flex-wrap: -ms-flex;
-	flex-wrap: wrap;
-	justify-content: center;
+  display: -webkit-flex; /* Supports older browsers */
+  display: -ms-flex; /* Supports Internet 10 */
+  display: flex;
+  flex-wrap: -webkit-flex;
+  flex-wrap: -ms-flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .col-1of12 {
-	flex: 1 1 8%;
-	border: #eee solid .15rem;
-	text-align: center;
-	padding: 15rem .5rem 15rem 1rem;
+  flex: 1 1 8%;
+  border: #eee solid 0.15rem;
+  text-align: center;
+  padding: 15rem 0.5rem 15rem 1rem;
 }
 
 .full-service .grid-col-1of1.buttons {
-	display: flex;
-	flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .grid-col-2 {
-	display: block;
+  display: block;
 }
 
 /* ------ Nav Bar ------ */
 nav .col-1of2 {
-	flex: 10 1 10%;
+  flex: 10 1 10%;
 }
 
-nav .col-1of6  {
-	flex-grow: 0.5;
+nav .col-1of6 {
+  flex-grow: 0.5;
 }
 
 /* ------ Hero Sections ------ */
-.home.hero   {
+.home.hero {
   display: flex;
   background-image: url("../img/hero/hero-img.png");
   background-repeat: no-repeat;
@@ -80,465 +82,528 @@ nav .col-1of6  {
 
 /* ------ Form Styling ------ */
 form .col-1of1 {
-	flex-direction: column;
-	align-content: flex-start;
+  flex-direction: column;
+  align-content: flex-start;
 }
 
 form .col-1of2 {
-	flex: 1 1 100%;
+  flex: 1 1 100%;
 }
 
-
-/* ------ Cart Template ------ */ 
-.col4 { 
-	display: grid; 
-	grid-template-columns: 1fr 1fr 1fr 1fr; 
-	grid-column-gap: 20px; 
-	align-items: center; 
-	text-align: center; 
-} 
-.col4 { 
-	display: grid; 
-	grid-template-columns: 1fr 1fr 1fr 1fr; 
-	grid-column-gap: 10px; 
-	align-items: center; 
-	text-align: center; 
-	padding-top: 5rem; 
-} 
+/* ------ Cart Template ------ */
+.col4 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-column-gap: 20px;
+  align-items: center;
+  text-align: center;
+}
+.col4 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-column-gap: 10px;
+  align-items: center;
+  text-align: center;
+  padding-top: 5rem;
+}
 
 /* ------ Landing Page ------ */
 .col-1of1-xs {
-	flex: 1 1 100%;
+  flex: 1 1 100%;
 }
 
-.col-1of3, .col-2of3, .col-3of3 {
-	flex-basis: 25%;
+.col-1of3,
+.col-2of3,
+.col-3of3 {
+  flex-basis: 25%;
 }
 
-.col-2of2, .col-2of2-reverse {
-	flex: 1 1 10%;
+.col-2of2,
+.col-2of2-reverse {
+  flex: 1 1 10%;
 }
 
 .grid-item.footer {
-	height: 200px;
-	flex: 1 1 100%;
+  height: 200px;
+  flex: 1 1 100%;
 }
 
 /* ------ Full Service Flow ------ */
 
-.full-service .left-align { 
-	background-color: #fff;
-	padding: 1rem 4rem 4rem 0rem;
-	flex: 1 0 50%;
-} 
+.full-service .left-align {
+  background-color: #fff;
+  padding: 1rem 4rem 4rem 0rem;
+  flex: 1 0 50%;
+}
 
-.full-service .right-align { 
-	background-color: #fff;
-	padding: 1rem 4rem 4rem 1rem;
-	flex: 1 0 50%;
-} 
+.full-service .right-align {
+  background-color: #fff;
+  padding: 1rem 4rem 4rem 1rem;
+  flex: 1 0 50%;
+}
+nav.grid .hamburger-container {
+  display: none;
+}
 
 /* ---------- MEDIA QUERIES ---------- */
 
 /* ----------  PHONE AND BELOW  ---------- */
 @media screen and (max-width: 37em) {
+  .grid,
+  section.location {
+    justify-content: unset;
+  }
 
-	nav .col-1of6 a {
-		font-size: 1.1rem;
-		letter-spacing: 0.05rem;
-		line-height: 2.7rem;
+  nav .col-1of6 a {
+    font-size: 1.1rem;
+    letter-spacing: 0.05rem;
+    line-height: 2.7rem;
+  }
 
-	}
+  h2 {
+    font-size: 3rem;
+    font-weight: 100;
+  }
 
-	h2 {
-		font-size: 3rem;
-		font-weight: 100;
-	}
+  h3 {
+    font-size: 1.5rem;
+  }
 
-	h3 {
-		font-size: 1.5rem;
-	}
+  .btn-main {
+    font-size: 12px;
+    padding: 1rem 2rem;
+    border-radius: 2.3rem;
+  }
 
-	.btn-main {
-		font-size: 1rem;
-		padding: 1rem 2rem;
-		border-radius: 2.3rem;
-	}
+  section.detailed-product {
+    padding: 5rem;
+  }
 
-	section.detailed-product {
-		padding: 5rem;
-	}
+  /*----- Nav Bar ------*/
+  nav.grid .mobile-hide {
+    display: none;
+  }
+  nav.grid .hamburger-container {
+    display: block;
+    padding: 0 20px;
+    position: absolute;
+    right: 0;
+  }
+  nav.grid .hamburger-container:hover > .hamburger-menu {
+    display: block;
+    position: absolute;
+    right: 16px;
+    background: #fff;
+    border: 1px solid #000;
+  }
+  nav.grid .hamburger-menu {
+    display: none;
+  }
+  nav.grid .hamburger-menu ul {
+    list-style: none;
+    padding: 20px;
+    margin: 0;
+  }
+  /* nav.grid .hamburger-dropdown:hover > .dropdown-items {
+    display: block;
+    position: relative;
+    box-shadow: none;
+    padding: 0;
+  } */
+  nav.grid .hamburger-menu a {
+    padding: 0;
+    margin-bottom: 20px;
+  }
+  nav.grid .hamburger-menu img {
+    height: 50px;
+  }
+  .announcement-bar {
+    padding: 1rem;
+    font-size: 1.2rem;
+  }
 
-	/*----- Nav Bar ------*/
-	.announcement-bar {
-		padding: 1rem;
-		font-size: 1.2rem;
-	}
+  nav .col-1of6,
+  nav .col-1of2 {
+    flex: 1 1 100%;
+    text-align: center;
+  }
 
-	nav .col-1of6, nav .col-1of2 {
-		flex: 1 1 100%;
-		text-align: center;
-	}
+  nav .col-1of2 {
+    margin-left: -3rem;
+    padding-top: 1.5rem;
+  }
 
-	nav .col-1of2 {
-		margin-left: -3rem;
-		padding-top: 1.5rem;
-	}
+  nav .col-1of6.search-bar {
+    text-align: center;
+    margin: auto;
+    padding-right: 0;
+  }
 
-	nav .col-1of6.search-bar {
-		text-align: center;
-		margin: auto;
-		padding-right: 0;
-	}
+  nav .col-1of6 input {
+    text-align: center;
+    margin: auto;
+  }
 
-	nav .col-1of6 input{
-		text-align: center;
-		margin: auto;
-	}
+  nav .col-1of2 a {
+    padding: 0;
+  }
 
-	 nav .col-1of2 a {
-	 	padding: 0;
-	 }
+  nav.grid img.logo {
+    width: 10rem;
+    height: auto;
+  }
 
-	 nav.grid img.logo {
-	 	width: 10rem;
-	 	height: auto;
-	 }
+  nav .col-1of6 img {
+    width: 30%;
+    height: auto;
+  }
 
-	  nav .col-1of6 img {
-	  	width: 30%;
-	 	height: auto;
-	  }
+  /*----- Home Hero ------*/
+  .hero .hero-text h1 {
+    padding-top: 0;
+    margin-top: 0rem;
+    font-size: 2.7rem;
+    max-width: none;
+    line-height: 3.5rem;
+  }
 
-	 /*----- Home Hero ------*/
-	 .hero .hero-text h1 {
-   		padding-top: 0;
-   		margin-top: 0rem;
-    	font-size: 2.7rem;
-		max-width: none;
-		line-height: 3.5rem;
-	}
+  /*----- Home - 3 Tiles ------*/
+  .menu {
+    margin: 2rem 0rem 2rem 0rem;
+  }
 
-	/*----- Home - 3 Tiles ------*/
-	.menu {
-		margin: 2rem 0rem 2rem 0rem;
-	}
+  .menu img {
+    width: 20rem;
+    height: 100%;
+  }
 
-	.menu img {
-		width: 20rem;
-		height: 100%;
-	}
+  .menu p {
+    font-size: 0.85rem;
+  }
 
-	.menu p {
-		font-size: .85rem;
-	}
+  section.categories {
+    padding: 5rem 2rem 5rem 2rem;
+  }
 
-	section.categories{
-    	padding: 5rem 2rem 5rem 2rem;
-	}
+  /*----- Home - Alternating Content ------*/
+  .alternating-content-text {
+    text-align: center;
+    padding: 0;
+  }
 
+  .alternating-content p {
+    max-width: 50rem;
+  }
 
-	/*----- Home - Alternating Content ------*/
-	.alternating-content-text{
-		text-align: center;
-		padding: 0;
-	}
+  .alternating-content {
+    padding: 2rem;
+  }
 
-	.alternating-content p {
-		max-width: 50rem;
-	}
+  /*----- Shop - Products Grid ------*/
+  .product-item.col-1of3,
+  .product-item.col-2of3,
+  .product-item.col-3of3 {
+    flex-basis: 100%;
+  }
 
-	.alternating-content {
-		padding: 2rem;
-	}
+  .product-item.col-1of3,
+  .product-item.col-2of3 {
+    padding-bottom: 3rem;
+  }
 
-	/*----- Shop - Products Grid ------*/
-	.product-item.col-1of3, .product-item.col-2of3, .product-item.col-3of3 {
-		flex-basis: 100%;
-	}
+  .product-item img {
+    width: 100%;
+    height: auto;
+  }
 
-	.product-item.col-1of3, .product-item.col-2of3  {
-		padding-bottom: 3rem;
-	}
+  .product-item p.product-name {
+    font-size: 2.4rem;
+    padding: 1rem 0rem 1rem 0rem;
+    max-width: 50rem;
+    line-height: 2.5rem;
+  }
 
-	.product-item img {
-		width: 100%;
-		height: auto;
-	}
+  p.price {
+    font-size: 1.5rem;
+    max-width: 50rem;
+  }
 
-	.product-item p.product-name {
-		font-size: 2.4rem;
-		padding: 1rem 0rem 1rem 0rem;
-		max-width: 50rem;
-		line-height: 2.5rem;
-	}
+  .grid.products {
+    text-align: center;
+  }
 
-	p.price {
-		font-size: 1.5rem;
-		max-width: 50rem;
-	}
+  .btn-add {
+    font-size: 1rem;
+    padding: 1rem;
+    border-radius: 1.4rem;
+  }
 
-	.grid.products {
-		text-align: center;
-	}
+  section.products {
+    padding: 0rem 2rem 0rem 2rem;
+  }
 
-	.btn-add {
-		font-size: 1rem;
-		padding: 1rem;
-		border-radius: 1.4rem;
-	}
+  /*----- About - Hero ------*/
+  .about .hero-text {
+    padding: 3rem;
+  }
 
-	section.products {
-		padding: 0rem 2rem 0rem 2rem;
-	}
+  .about h1 {
+    text-align: left;
+  }
 
-	/*----- About - Hero ------*/
-	.about .hero-text {
-		padding: 3rem;
-	}
+  /*----- About - Values ------*/
+  .values img,
+  .values.col-2of3 img {
+    width: 4rem;
+    height: auto;
+  }
 
-	.about h1 {
-		text-align: left;
-	}
+  .values.col-1of3,
+  .values.col-2of3,
+  .values.col-3of3 {
+    flex-basis: 100%;
+    padding: 1rem 0rem 3rem 0rem;
+  }
 
-	/*----- About - Values ------*/
-	.values img, .values.col-2of3 img {
-		width: 4rem;
-		height: auto;
-	}
+  .values p {
+    max-width: 28rem;
+    margin: auto;
+  }
 
-	.values.col-1of3, .values.col-2of3, .values.col-3of3 {
-		flex-basis: 100%;
-		padding: 1rem 0rem 3rem 0rem;
-	}
+  /*----- Support ------*/
+  section.faq {
+    padding-top: 0rem;
+  }
 
-	.values p {
-		max-width: 28rem;
-		margin: auto;
-	}
+  /*----- Detailed Product Listing ------*/
+  section.detailed-product {
+    padding: 5rem 3rem 5rem 3rem;
+  }
 
+  .stars p {
+    font-size: 1.7rem;
+  }
 
-	/*----- Support ------*/
-	section.faq {
-		padding-top: 0rem;
-	}
+  label,
+  select,
+  input {
+    font-size: 1.1rem;
+  }
 
-	/*----- Detailed Product Listing ------*/
-	section.detailed-product {
-   		 padding: 5rem 3rem 5rem 3rem ;
-	}
+  select,
+  input {
+    padding: 10px 15px;
+  }
 
-	.stars p {
-		font-size: 1.7rem;
-	}
+  .review.form,
+  .review-content {
+    padding: 3rem;
+  }
 
-	label, select, input {
-		font-size: 1.1rem;
-	}
+  #fname,
+  #lname,
+  #email-ad,
+  #email,
+  #email-review {
+    width: 100%;
+  }
 
- 	select, input {
-		padding: 10px 15px;
-	}
+  input#review-body {
+    padding-bottom: 10rem;
+  }
 
-	.review.form, .review-content {
-		padding: 3rem;
-	}
+  .btn-submit {
+    font-size: 1rem;
+  }
 
-	#fname, #lname, #email-ad, #email, #email-review {
-		width: 100%;
-	}
+  section.review {
+    padding: 0;
+  }
 
-	input#review-body {
-   	 	padding-bottom: 10rem;
-	}
+  .product-img img {
+    width: 100%;
+    height: auto;
+  }
 
-	.btn-submit {
-		font-size: 1rem;
-	}
+  /*-----Shop ------*/
+  .hero-text {
+    padding: 8rem 0 5rem 0 !important;
+  }
 
-	section.review {
-		padding: 0;
-	}
+  /*----- FAQ ------*/
+  .faq .hero-text {
+    margin: auto;
+  }
 
-	.product-img img {
-		width: 100%;
-		height: auto;
-	}
+  .faq.hero {
+    padding-top: 7rem;
+  }
 
-	/*-----Shop ------*/
-	.hero-text {
-    	padding: 8rem 3rem 5rem 3rem !important;
-	}
+  section.faq {
+    padding: 0rem 0rem 5rem 0rem;
+  }
 
-	/*----- FAQ ------*/
-	.faq .hero-text {
-		margin: auto;
-	}
+  /*----- Services - 3 Tiles ------*/
+  .menu.services p {
+    left: 3.5rem;
+    top: 6rem;
+  }
 
-	.faq.hero {
-		padding-top: 7rem;
-	}
+  /*----- Footer ------*/
+  .child-footer.location,
+  .child-footer.contact,
+  .child-footer.mailing-list {
+    max-width: none;
+  }
 
-	section.faq {
-		padding: 0rem 0rem 5rem 0rem;
-	}
+  .child-footer.mailing-list button {
+    color: #20605a;
+    border-radius: 0.3rem;
+    border: 0.1rem solid #20605a;
+    background-color: #f2eae4;
+    width: 100%;
+  }
 
-	/*----- Services - 3 Tiles ------*/
-	.menu.services p {
-		left: 3.5rem;
-		top: 6rem;
-	}
+  .child-footer.mailing-list label {
+    font-size: 1.5rem;
+    max-width: 15rem;
+  }
 
-	/*----- Footer ------*/
-	.child-footer.location, .child-footer.contact, .child-footer.mailing-list {
-		max-width: none;
-	}
+  /*------ Forms ------*/
+  .cart form,
+  .full-service form {
+    padding: 1rem 1rem 1rem 2rem;
+  }
 
-	.child-footer.mailing-list button {
-		color: #20605A;
-		border-radius: .3rem;
-		border: .1rem solid  #20605A;
-		background-color: #F2EAE4;
-		width: 100%;
-	}
+  form .grid-col-1of2 {
+    padding-right: 0;
+  }
 
-	.child-footer.mailing-list label {
-		font-size: 1.5rem;
-		max-width: 15rem;
-	}
+  /*----- Full Service Flow ------*/
+  .half-width-left {
+    padding: 5em 0rem 5rem 0rem;
+  }
 
+  /*----- Full Service Flow  ------*/
+  .full-service .left-align {
+    background-color: #fff;
+    padding: 1rem 4rem 4rem 0rem;
+    flex-basis: 100%;
+  }
 
-	/*------ Forms ------*/
-	.cart form, .full-service form {
-   		 padding: 1rem 1rem 1rem 2rem;
-	}
-
-	form .grid-col-1of2 {
-    	 padding-right: 0;
- 	}
-
-	/*----- Full Service Flow ------*/
-	.half-width-left {
-   		 padding: 5em 0rem 5rem 0rem;
-	}
-
-	/*----- Full Service Flow  ------*/
-	.full-service .left-align { 
-		background-color: #fff;
-		padding: 1rem 4rem 4rem 0rem;
-		flex-basis: 100%;
-	} 
-
-	.full-service .right-align { 
-		background-color: #fff;
-		padding: 1rem 4rem 4rem 1rem;
-		flex-basis: 100%;
-	} 
-	
+  .full-service .right-align {
+    background-color: #fff;
+    padding: 1rem 4rem 4rem 1rem;
+    flex-basis: 100%;
+  }
 }
 
 /* ----------  TABLET AND BELOW  ---------- */
 @media (max-width: 48em) {
+  /*----- Nav Bar------*/
+  nav .col-1of6 img {
+    height: auto;
+  }
 
-	/*----- Nav Bar------*/
-	nav .col-1of6 img {
-		height: auto;
-	}
+  .home .hero-text h1,
+  .hero-text {
+    text-align: center;
+    padding: 0 10%;
+  }
 
-	.home .hero-text h1, .hero-text {
-		text-align: center;
-	}
+  .hero-text {
+    padding: 8rem 5rem 5rem 5rem;
+  }
 
-	.hero-text {
-		padding: 8rem 5rem 5rem 5rem;
-	}
+  .hero button {
+    margin-bottom: 2rem;
+  }
 
-	.hero button {
-		margin-bottom: 2rem;
-	}
+  /*----- Home - 3 Tiles------*/
+  .menu {
+    margin: 2rem 0rem 2rem 0rem;
+  }
 
-	/*----- Home - 3 Tiles------*/
-	.menu {
-		margin: 2rem 0rem 2rem 0rem;
-	}
+  /*----- Home - Alternating Content ------*/
+  .col-2of2,
+  .col-2of2-reverse {
+    flex: 1 1 100%;
+    text-align: center;
+  }
 
-	/*----- Home - Alternating Content ------*/
-	.col-2of2, .col-2of2-reverse {
-		flex: 1 1 100%;
-		text-align: center;
-	}
+  .alternating-content-text h2 {
+    padding: 2rem 0rem 2rem 0rem;
+  }
 
-	.alternating-content-text h2 {
-		padding: 2rem 0rem 2rem 0rem;
-	}
+  .alternating-content-text {
+    text-align: center;
+    padding-bottom: 2rem;
+  }
 
-	.alternating-content-text {
-		text-align: center;
-		padding-bottom: 2rem;
-	}
+  .alternating-content p {
+    font-size: 1.2rem !important;
+    margin: auto;
+    max-width: 35rem;
+  }
 
-	.alternating-content p {
-		font-size: 1.2rem !important;
-		margin: auto;
-		max-width: 35rem;
-	}
+  .alternating-content-text.col-2of2 {
+    text-align: center;
+  }
 
-	.alternating-content-text.col-2of2 {
-		text-align: center;
-	}
+  .alternating-content-img img {
+    width: 100%;
+    height: auto;
+  }
 
-	.alternating-content-img img {
-		width: 100%;
-		height: auto;
-	}
+  /*----- Shop - Hero ------*/
+  .shop p {
+    font-size: 1.3rem;
+  }
 
-	/*----- Shop - Hero ------*/
-	.shop p {
-		font-size: 1.3rem;
-	}
+  .col-1of3,
+  .col-2of3,
+  .col-3of3 {
+    flex-basis: 50%;
+    padding: 0rem 2rem 5rem 3rem;
+  }
 
-	.col-1of3, .col-2of3, .col-3of3 {
-    	flex-basis: 50%;
-    	padding: 0rem 2rem 5rem 3rem;
-	}
+  /*----- Detailed Product Listing ------*/
+  .product-img,
+  .product-desc {
+    padding-right: 0;
+    padding-bottom: 3rem;
+  }
 
-	/*----- Detailed Product Listing ------*/
-	.product-img, .product-desc {
-		padding-right: 0;
-		padding-bottom: 3rem;
-	}
+  .col-2of2 {
+    text-align: left;
+  }
 
-	.col-2of2 {
-		text-align: left;
-	}
+  /*----- About - Location ------*/
+  .alternating-content-img.col-1of2 {
+    flex: 1 1 100%;
+  }
 
-	/*----- About - Location ------*/
-	.alternating-content-img.col-1of2{
-		flex: 1 1 100%;
-	}
+  /*----- Full Service Flow  ------*/
+  .full-service .left-align {
+    background-color: #fff;
+    padding: 0rem 0rem 0rem 0rem;
+    flex-grow: 2;
+  }
 
-	/*----- Full Service Flow  ------*/
-	.full-service .left-align { 
-		background-color: #fff;
-		padding: 0rem 0rem 0rem 0rem;
-		flex-grow: 2;
-	} 
+  .full-service .right-align {
+    background-color: #fff;
+    flex-grow: 2;
+  }
 
-	.full-service .right-align { 
-		background-color: #fff;
-		flex-grow: 2;
-	} 
+  form .name-item {
+    padding-right: 0;
+  }
 
-	form .name-item {
-		padding-right: 0;
-	}
-
-	.full-service h1 {
-		margin: 3rem 1rem 3rem 0rem;
-		text-align: center;
-	}
+  .full-service h1 {
+    margin: 3rem 1rem 3rem 0rem;
+    text-align: center;
+  }
 }
-
 
 /* ----------  DESKTOP AND BELOW ---------- */
 @media (max-width: 75em) {
